# aula09_bootcamp

./: etl.py  exemplo_00.py  logging_exemplos_erros.py  pyproject.toml
